--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ bbs = "=0.4.1"
 pairing-plus = "=0.19.0"
 ff = { version = "0.6", package = "ff-zeroize" }
 hkdf = "0.8"
-zeroize = { version = "1.4", features = ["zeroize_derive"] }
+zeroize = { version = "1.5", features = ["zeroize_derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_jcs = "0.1"
@@ -42,7 +42,7 @@ pest_derive = "2.1"
 derive_builder = "0.9"
 base64 = "0.12"
 ring = { version = "0.16", optional = true }
-rsa = { version = "0.3", optional = true }
+rsa = { version = "0.5", optional = true }
 ed25519-dalek = { version = "1", optional = true }
 rand = { version = "0.8", optional = true }
 rand_old = { package = "rand", version = "0.7" }
@@ -56,7 +56,7 @@ futures = "0.3"
 iref = "^2.0.3"
 lazy_static = "1.4"
 combination = "0.1"
-sha2 = { version = "0.9", optional = true }
+sha2 = { version = "0.10", optional = true }
 sha2_old = { package = "sha2", version = "0.8" }
 hyper = { version = "0.14", optional = true, features = ["server", "client", "http1", "stream"] }
 hyper-tls = { version = "0.5", optional = true }
@@ -65,17 +65,18 @@ hex = "0.4"
 serde_urlencoded = "0.7"
 percent-encoding = { version = "2.1", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros"] }
-blake2b_simd = "0.5"
+# blake2b_simd = "0.5"
+blake2 = "0.10"
 bs58 = { version = "0.4", features = ["check"] }
 thiserror = "1.0"
 keccak-hash = { version = "0.7", optional = true }
 # TODO make this optional, or remove it
-ecdsa = "0.11.1"
+ecdsa = "0.14.0-pre.1"
 digest = "0.9"
-k256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
-p256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
+k256 = { version = "0.11.0-pre.0", optional = true, features = ["ecdsa"] }
+p256 = { version = "0.11.0-pre.0", optional = true, features = ["ecdsa"] }
 ssi-contexts = { version = "0.1.2", path = "contexts/" }
-ripemd160 = { version = "0.9", optional = true }
+ripemd160 = { version = "0.10", optional = true }
 sshkeys = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 flate2 = "1.0"
